--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ body {
 }
 
 .jumbotron {
-    background-image: url('https://via.placeholder.com/1600x600');
+    background-image: url('../img/baner.png');
     background-size: cover;
     background-position: center;
     color: #fff;
